--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
-    "mongoose": "^6.6.1"
-    "concurrently": "^7.1.0",
+    "mongoose": "^6.6.1",
+    "concurrently": "^7.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
