--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "nodemon server/index.js",
-    "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "data:import": "node server/seeder",
-    "data:destroy": "node server/seeder -d",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
-  },
+  "test": "echo \"Error: no test specified\" && exit 1",
+  "start": "node server/index.js",  // Start the server
+  "server": "nodemon server/index.js",
+  "client": "npm start --prefix client",  // Start the React client
+  "dev": "concurrently \"npm run server\" \"npm run client\"",  // Start both server and client concurrently
+  "data:import": "node server/seeder",
+  "data:destroy": "node server/seeder -d",
+  "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+},
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
