--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "scripts": {
   "test": "echo \"Error: no test specified\" && exit 1",
-  "start": "node server/index.js",  // Start the server
+  "start": "node server/index.js",
   "server": "nodemon server/index.js",
-  "client": "npm start --prefix client",  // Start the React client
-  "dev": "concurrently \"npm run server\" \"npm run client\"",  // Start both server and client concurrently
+  "client": "npm start --prefix client",
+  "dev": "concurrently \"npm run server\" \"npm run client\"",
   "data:import": "node server/seeder",
   "data:destroy": "node server/seeder -d",
   "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
