--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "data:import": "node server/seeder",
     "data:destroy": "node server/seeder -d",
-    "vercel-build": "npm install && npm run build-backend"
+    "vercel-build": "npm install && npm run build-backend",
+    "build-backend": "echo \"Backend build step completed\""
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
