moved vercel config to server folder

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -3,14 +3,14 @@
   "name": "integrated-management-system",
   "builds": [
     {
-      "src": "server/index.js",
+      "src": "/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/server/index.js"
+      "dest": "/index.js"
     }
   ]
 }
